# ghtopdep

./: .gitignore  Dockerfile  LICENSE  README.md  README.rst  main.py  pyproject.toml  setup.cfg  setup.py
ghtopdep/: ghtopdep.py
