[tool.poetry]
name = "ghtopdep"
version = "0.3.12"
description = "CLI tool for sorting dependents repositories and packages by stars"
authors = ["Andriy Orehov <andriyorehov@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.urls]
"Source" = "https://github.com/github-tooling/ghtopdep"
"Bug Tracker" = "https://github.com/github-tooling/ghtopdep/issues"

[tool.poetry.dependencies]
python = "^3.5"
selectolax = "^0.1.13"
tabulate = "^0.8.3"
click = "^7.0"
halo = "^0.0.26"
cachecontrol = "^0.12.5"
lockfile = "^0.12.2"
requests = "^2.22"
"github3.py" = "^1.3"
appdirs = "^1.4.3"
pipdate = "^0.3.4"

[tool.poetry.dev-dependencies]
better_exceptions = "^0.2.2"
pysnooper = "^0.3.0"

[tool.poetry.scripts]
ghtopdep = 'ghtopdep.ghtopdep:cli'
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
