[tool.poetry]
name = "ghtopdep"
version = "0.3.14"
description = "CLI tool for sorting dependents repositories and packages by stars"
authors = ["Andriy Orehov <andriyorehov@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.urls]
"Source" = "https://github.com/github-tooling/ghtopdep"
"Bug Tracker" = "https://github.com/github-tooling/ghtopdep/issues"

[tool.poetry.dependencies]
python = "^3.7"
selectolax = "^0.3.7"
tabulate = "^0.8.3"
click = "^8.1.2"
halo = "^0.0.31"
cachecontrol = "^0.12.5"
lockfile = "^0.12.2"
requests = "^2.22"
"github3.py" = "^3.2.0"
appdirs = "^1.4.4"
pipdate = "^0.5.6"

[tool.poetry.dev-dependencies]
better_exceptions = "^0.2.2"
pysnooper = "^0.3.0"

[tool.poetry.scripts]
ghtopdep = 'ghtopdep.ghtopdep:cli'
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}