[tool.poetry]
name = "ghtopdep"
version = "0.4.2"
description = "CLI tool for sorting dependents repositories and packages by stars"
authors = ["Andriy Orehov <andriyorehov@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.urls]
"Source" = "https://github.com/github-tooling/ghtopdep"
"Bug Tracker" = "https://github.com/github-tooling/ghtopdep/issues"

[tool.poetry.dependencies]
python = "^3.7"
selectolax = "^0.3.7"
tabulate = "^0.8.3"
click = "^8.1.2"
requests = "^2.22"
"github3.py" = "^4.0.1"
appdirs = "^1.4.4"
pipdate = "^0.5.6"
cachecontrol = {extras = ["filecache"], version = "^0.14.0"}
tqdm = "^4.66.4"

[tool.poetry.dev-dependencies]
better_exceptions = "^0.2.2"
pysnooper = "^0.3.0"

[tool.poetry.scripts]
ghtopdep = 'ghtopdep.ghtopdep:cli'
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}
